1999-02-11  James Henstridge  <james@daa.com.au>

	* gnome-icon-list.c(gnome_icon_list_set_hadjustment): When a
	horizontal adjustment is given for the GnomeIconList, set the values
	in the adjustment so that page_size = lower-upper, since the icon
	list doesn't scroll horizontally.
	(gil_destroy): unref the horizontal adjustment if we have one.

1999-02-10  Felix Bellaby <felix@pooh.u-net.com>

	* gnome-client.c (client_set_restart_command, client_set_clone_command,
	client_save_yourself_callback): fix implementation of the config 
	prefix so that it is based on the global config prefix as documented.

1999-02-10  James Henstridge  <james@daa.com.au>

	* gnome-icon-list.c: added an implementation for the
	gtk_widget_set_scroll_adjustments interface.  Rather than creating a
	new signal, I have overriden GtkLayout's set_scroll_adjustment signal.
	This keeps binary compatibility and allows you to pack a GnomeIconList
	into a GtkScrolledWindow and get the correct behaviour again.

	* gnome-app-util.c: The gnome_app_progress_* functions would sometimes
	cause a segfault.  There was code to make sure that stale progress
	keys would get destroyed when the associated GnomeApp got destroyed.
	If you cleaned up the key with gnome_app_progress_done, then a segfault
	would occur when the GnomeApp got destroyed.  Now the cleanup
	signal handler's id is saved and the handler is removed when the key
	is destroyed.

Tue Feb 09 18:51:08 1999  George Lebl  <jirka@5z.com>

	* gnome-pixmap-entry.c: fix this up, don't look up pixmaps more then
	  once a second if the entry is changing, plus scale the preview in
	  the file browser properly

1999-02-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c (gil_button_press): Do nothing if the button
	is different from 1.

1999-02-09  Chris Lahey  <clahey@umich.edu>

	* gnome-paper-selector.h, gnome-paper-selector.c: Added
	gnome_paper_selector_set functions.  These are neccessary and thus
	constitute a bug fix.
