@@ -1,3 +1,7 @@
+1999-02-10  Federico Mena Quintero  <federico@nuclecu.unam.mx>
+
+	* gnome-icon-list.c: Indentation fixes.
+
 1999-02-11  James Henstridge  <james@daa.com.au>
 
 	* gnome-icon-list.c(gnome_icon_list_set_hadjustment): When a
